# Demo-android

./: .gitignore  README.md  build.gradle  demkeystore  maven.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/flueky/demo/: MainActivity.java
jni/: build.gradle
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: CMakeLists.txt  hello-jni.c  hello-jni.cpp
jni/src/main/cpp/bar/: CMakeLists.txt  bar.cpp  jni_main.cpp
jni/src/main/cpp/bar/include/bar/: bar.h  jni_main.h
jni/src/main/cpp/baz/: CMakeLists.txt  baz.cpp  jni_main.cpp
jni/src/main/cpp/baz/include/baz/: baz.h  jni_main.h
jni/src/main/cpp/foo/: CMakeLists.txt  foo.cpp  jni_main.cpp
jni/src/main/cpp/foo/include/foo/: foo.h  jni_main.h
jni/src/main/cpp/util/: CMakeLists.txt  log.h  util.cpp  util.h
lib/: build.gradle
lib/src/main/java/com/flueky/lib/: Test.java
